# ipl-fantasy

./: .gitignore  AGENTS.md  HANDOFF.md  README.md  away-ground-penalty.md  pyproject.toml
cli/: main.py
data/: fantasy_league_rules_2026.md  player_aliases.json  schedule_2026.json  squads_2026.json
data/raw/: cricket_data_2026.csv  deliveries_2025.csv  matches.csv  matches_2025.csv  t20_recent_form.csv
data/scraped/: ar_base_points.odt  bat_base_points.odt  bowl_base_points.odt  wk_base_points.odt
scripts/: build_name_map.py  fetch_2025_data.py  fetch_t20_form.py
src/: __init__.py  config.py
src/agent/: orchestrator.py
src/captain/: selector.py
src/data/: features.py  ingest.py
src/forecast/: cold_start.py  models.py
src/llm/: sidecar.py
src/optimizer/: fantasy_ilp.py  transfer_optimizer.py
src/reranker/: bandit.py  reward_model.py
src/scoring/: fantasy.py
src/season/: __init__.py  schedule.py  state.py
src/simulation/: monte_carlo.py
tests/: test_captain.py  test_forecast.py  test_optimizer.py  test_scoring.py  test_season_schedule.py  test_season_state.py  test_simulation.py
